# carbon

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
include/carbon/: carbon.hpp  constants.hpp  globals.hpp  input.hpp  theme.hpp  window_manager.hpp
include/carbon/esp/: box.hpp
include/carbon/layout/: axes.hpp  base_view.hpp  compose.hpp  item.hpp  layout.hpp  model.hpp  node.hpp  paint.hpp  styling.hpp  text.hpp  view.hpp
include/carbon/layout/containers/: base_flex_container.hpp
include/carbon/util/: hash.hpp
include/carbon/widgets/: button.hpp  checkbox.hpp  groupbox.hpp  label.hpp  page.hpp  separator.hpp  tab_sheet.hpp  widget.hpp  window.hpp
include/carbon/widgets/containers/: groupbox.hpp  page.hpp  tab_sheet.hpp  window.hpp
include/carbon/widgets/controls/: button.hpp  checkbox.hpp  color_picker.hpp  dropdown.hpp  label.hpp  listbox.hpp  separator.hpp  slider.hpp  textbox.hpp
lib/: CMakeLists.txt
src/: carbon.cpp  globals.cpp  input.cpp  theme.cpp
src/layout/: base_view.cpp  compose.cpp  item.cpp  layout.cpp  node.cpp  paint.cpp  styling.cpp  view.cpp
src/layout/containers/: base_flex_container.cpp  flex_container.cpp
src/widgets/: widget.cpp
src/widgets/containers/: groupbox.cpp  page.cpp  tab_sheet.cpp  window.cpp
src/widgets/controls/: button.cpp  checkbox.cpp  dropdown.cpp  separator.cpp  textbox.cpp
test/: CMakeLists.txt
test/include/: config.hpp  util.hpp
test/src/: config.cpp  main.cpp
